// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputDirective Basic input Check default state 1`] = `
<input
  adrinput=""
  class="adr-input"
/>
`;

exports[`InputDirective Basic input check class on focus 1`] = `
<input
  adrinput=""
  class="adr-input adr-focused"
/>
`;

exports[`InputDirective Basic input should set value value1 1`] = `
<input
  adrinput=""
  class="adr-input"
  value="value1"
/>
`;

exports[`InputDirective Basic input should set value value2 1`] = `
<input
  adrinput=""
  class="adr-input"
  value="value2"
/>
`;

exports[`InputDirective Basic input should update parent value on change, expect value1 1`] = `
<input
  adrinput=""
  class="adr-input"
  value="value1"
/>
`;

exports[`InputDirective Basic input should update parent value on change, expect value2 1`] = `
<input
  adrinput=""
  class="adr-input"
  value="value2"
/>
`;

exports[`InputDirective Basic input when focused then check class on blur 1`] = `
<input
  adrinput=""
  class="adr-input"
/>
`;

exports[`InputDirective Disabled input do not emit change 1`] = `
<input
  adrinput=""
  class="adr-input"
  disabled=""
/>
`;

exports[`InputDirective Disabled input when focus then check dont have focused class 1`] = `
<input
  adrinput=""
  class="adr-input"
  disabled=""
/>
`;

exports[`InputDirective Readonly input do not emit change 1`] = `
<input
  adrinput=""
  class="adr-input"
  readonly=""
/>
`;

exports[`InputDirective Readonly input when focus then check dont have focused class 1`] = `
<input
  adrinput=""
  class="adr-input"
  readonly=""
/>
`;
